refactor: remove preview features